@@ -24,6 +24,7 @@
 #include <librom1394/rom1394.h>
 #include <libraw1394/raw1394.h>
 #include <stdio.h>
+#include <stdlib.h>
 #include <errno.h>
 
 int main (int argc, char *argv[])
